[package]
name = "ws281x-rpi"
version = "0.0.1"
authors = ["Nathan Samson <nathan@nathansamson.be>"]
edition = "2018"
license = "MIT"
description = "Wrapper for ws281x library using bindgen to track upstream implementing the smart-leds trait"
repository = "https://github.com/nathansamson/ws281x-rpi"

[dependencies]
smart-leds-trait = "0.2"

[build-dependencies]
bindgen = { version = "0.59", default-features = false }
cc = "1.0"
